Use basic input readiness checks with explicit rebuild   protection